--- a/src/style.css
+++ b/src/style.css
@@ -180,6 +180,15 @@ input[type="search"]:focus {
 
 }
 
+.hero-movies-poster::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(1, 4, 2, 1) 0%, rgba(0, 212, 255, 0) 100%);
+  z-index: 0;
+}
+
 #hero-container {
   display: flex;
   flex-direction: column;
@@ -189,7 +198,7 @@ input[type="search"]:focus {
 }
 
 #hero-paragraph-id {
-  width: 50%;
+  width: 100%;
 }
 
 #hero-title-id {
@@ -698,6 +707,9 @@ footer {
     caret-color: var(--green-12);
   }
 
+  #hero-paragraph-id {
+    width: 50%;
+  }
 
 }
 
