--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,9 @@
 /* details page styles */
+#details-page {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
 
 .info-title {
   color: var(--white);
@@ -136,7 +141,7 @@
   gap: 20px;
   margin-bottom: 40px;
   max-width: 100%;
-  height: 70vh;
+  height: 80vh;
 }
 
 #movie-details img {
@@ -167,8 +172,7 @@ h2 {
 
 #movie-cast div,
 #similar-movies div {
-  text-align: center;
-  width: 150px;
+  text-align: left;
 }
 
 #movie-cast img,
@@ -196,4 +200,8 @@ h2 {
 #similar-movies p {
   margin-top: 10px;
   font-size: 14px;
+}
+
+#cast-container {
+  margin-top: 8rem;
 }
